SERVER-81448 time-series unpack stage in SBE should publish all fields from reqs